add project click event

--- a/index.css
+++ b/index.css
@@ -205,7 +205,7 @@ body{
     align-items:center;
     text-align: center;
     color: whitesmoke;
-
+    cursor: pointer;
 }
 
 .projectItemDescription{
